// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds dirname to all lifecycles async 1`] = `
{
  "overridePreprocessor": [
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>",
  ],
  "overrideProcessor": [
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>",
  ],
  "overrideValidator": [
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>",
  ],
  "postProcessor": [
    "<PROJECT_ROOT>",
  ],
  "preprocessor": [
    "<PROJECT_ROOT>",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
  ],
  "processor": [
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>",
    "<PROJECT_ROOT>",
  ],
  "validator": [
    "<PROJECT_ROOT>",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
  ],
}
`;

exports[`adds dirname to all lifecycles sync 1`] = `
{
  "overridePreprocessor": [
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>",
  ],
  "overrideProcessor": [
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>",
  ],
  "overrideValidator": [
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>",
  ],
  "postProcessor": [
    "<PROJECT_ROOT>",
  ],
  "preprocessor": [
    "<PROJECT_ROOT>",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
  ],
  "processor": [
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>",
    "<PROJECT_ROOT>",
  ],
  "validator": [
    "<PROJECT_ROOT>",
    "<PROJECT_ROOT>/node_modules/preset-01",
    "<PROJECT_ROOT>/node_modules/preset-02",
    "<PROJECT_ROOT>/node_modules/preset-02/node_modules/preset-03",
  ],
}
`;

exports[`allows builtin processor async 1`] = `
{
  "example": [
    1,
    2,
    3,
  ],
  "inside": [
    1,
    3,
  ],
  "object": [
    {
      "array": [
        1,
      ],
      "one": true,
      "preset": 1,
    },
    {
      "array": [
        2,
      ],
      "preset": 2,
      "two": true,
    },
    {
      "array": [
        3,
      ],
      "preset": 1,
      "three": true,
    },
  ],
  "other": [
    1,
    2,
    3,
  ],
}
`;

exports[`allows builtin processor override async 1`] = `
{
  "example": [
    1,
    2,
    3,
  ],
  "inside": [
    3,
    1,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
}
`;

exports[`allows builtin processor override sync 1`] = `
{
  "example": [
    1,
    2,
    3,
  ],
  "inside": [
    3,
    1,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
}
`;

exports[`allows builtin processor sync 1`] = `
{
  "example": [
    1,
    2,
    3,
  ],
  "inside": [
    1,
    3,
  ],
  "object": [
    {
      "array": [
        1,
      ],
      "one": true,
      "preset": 1,
    },
    {
      "array": [
        2,
      ],
      "preset": 2,
      "two": true,
    },
    {
      "array": [
        3,
      ],
      "preset": 1,
      "three": true,
    },
  ],
  "other": [
    1,
    2,
    3,
  ],
}
`;

exports[`allows custom preset and plugin name async 1`] = `
{
  "customPlugin": [
    {
      "imported": [
        "imported plugin-01",
      ],
    },
  ],
  "example": [
    1,
  ],
  "inside": [
    1,
  ],
  "object": {
    "array": [
      1,
    ],
    "one": true,
    "preset": 1,
  },
  "other": 1,
  "presets": [
    "preset-02",
  ],
}
`;

exports[`allows custom preset and plugin name sync 1`] = `
{
  "customPlugin": [
    {
      "imported": [
        "imported plugin-01",
      ],
    },
  ],
  "example": [
    1,
  ],
  "inside": [
    1,
  ],
  "object": {
    "array": [
      1,
    ],
    "one": true,
    "preset": 1,
  },
  "other": 1,
  "presets": [
    "preset-02",
  ],
}
`;

exports[`allows custom processor async 1`] = `
{
  "example": [
    0,
  ],
  "inside": [
    0,
  ],
  "object": {
    "array": [
      1,
    ],
    "one": true,
    "preset": 1,
  },
  "other": 1,
}
`;

exports[`allows custom processor override async 1`] = `
{
  "example": [
    0,
  ],
  "inside": [
    3,
    0,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
}
`;

exports[`allows custom processor override sync 1`] = `
{
  "example": [
    0,
  ],
  "inside": [
    3,
    0,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
}
`;

exports[`allows custom processor sync 1`] = `
{
  "example": [
    0,
  ],
  "inside": [
    0,
  ],
  "object": {
    "array": [
      1,
    ],
    "one": true,
    "preset": 1,
  },
  "other": 1,
}
`;

exports[`allows disabling presets and plugins async 1`] = `
{
  "inside": [
    1,
  ],
  "plugins": [
    "plugin-one",
  ],
  "presets": [
    "one",
  ],
}
`;

exports[`allows disabling presets and plugins sync 1`] = `
{
  "inside": [
    1,
  ],
  "plugins": [
    "plugin-one",
  ],
  "presets": [
    "one",
  ],
}
`;

exports[`allows post processing async 1`] = `
{
  "example": [
    6,
    4,
    2,
    0,
  ],
  "inside": [
    3,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
}
`;

exports[`allows post processing sync 1`] = `
{
  "example": [
    6,
    4,
    2,
    0,
  ],
  "inside": [
    3,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
}
`;

exports[`allows preprocessor async 1`] = `
{
  "example": [
    "3",
    "2",
    "1",
    "0",
  ],
  "inside": [
    3,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
}
`;

exports[`allows preprocessor override async 1`] = `
{
  "example": [
    "3",
    "2",
    "1",
    "0",
  ],
  "inside": [
    3,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
}
`;

exports[`allows preprocessor override sync 1`] = `
{
  "example": [
    "3",
    "2",
    "1",
    "0",
  ],
  "inside": [
    3,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
}
`;

exports[`allows preprocessor sync 1`] = `
{
  "example": [
    "3",
    "2",
    "1",
    "0",
  ],
  "inside": [
    3,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
}
`;

exports[`api option async 1`] = `
{
  "example": [
    1,
  ],
  "plugins": [
    {
      "imported": "plugin-05",
      "plugin05Args": {
        "api": Api {
          "add": [Function bound add],
          "loaded": [
            "preprocessor",
            "validator",
            "preset-07",
            "preprocessor",
            "validator",
            "processor",
            "plugin-05",
          ],
        },
        "dirname": "<PROJECT_ROOT>",
        "options": {},
      },
    },
  ],
  "preset07Args": {
    "api": Api {
      "add": [Function bound add],
      "loaded": [
        "preprocessor",
        "validator",
        "preset-07",
      ],
    },
    "dirname": "<PROJECT_ROOT>",
    "options": {},
  },
}
`;

exports[`api option sync 1`] = `
{
  "example": [
    1,
  ],
  "plugins": [
    {
      "imported": "plugin-05",
      "plugin05Args": {
        "api": Api {
          "add": [Function bound add],
          "loaded": [
            "preprocessor",
            "validator",
            "preset-07",
            "preprocessor",
            "validator",
            "processor",
            "plugin-05",
          ],
        },
        "dirname": "<PROJECT_ROOT>",
        "options": {},
      },
    },
  ],
  "preset07Args": {
    "api": Api {
      "add": [Function bound add],
      "loaded": [
        "preprocessor",
        "validator",
        "preset-07",
      ],
    },
    "dirname": "<PROJECT_ROOT>",
    "options": {},
  },
}
`;

exports[`async-only tests adds dirname to all lifecycles with delay 1`] = `
{
  "example": [
    "3 preprocessor overridePreprocessor overrideProcessor postProcessor",
    "2 preprocessor overridePreprocessor overrideProcessor postProcessor",
    "1 preprocessor overridePreprocessor overrideProcessor postProcessor",
    "0 preprocessor overridePreprocessor overrideProcessor postProcessor",
  ],
  "inside": [
    "3 preprocessor processor postProcessor",
    "1 preprocessor processor postProcessor",
  ],
  "object": {
    "array": [
      "3 preprocessor processor postProcessor",
      "2 preprocessor processor postProcessor",
      "1 preprocessor processor postProcessor",
    ],
    "one": "true preprocessor processor postProcessor",
    "preset": "1 preprocessor processor postProcessor",
    "three": "true preprocessor processor postProcessor",
    "two": "true preprocessor processor postProcessor",
  },
  "other": "1 preprocessor processor postProcessor",
  "plugins": [
    {
      "imported": [
        "imported plugin-01 processor",
      ],
    },
  ],
}
`;

exports[`baseDirectory option async 1`] = `
{
  "example": [
    3,
    2,
    1,
  ],
  "inside": [
    3,
    1,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
  "plugins": [
    "imported backtrack-plugin-01",
  ],
}
`;

exports[`baseDirectory option sync 1`] = `
{
  "example": [
    3,
    2,
    1,
  ],
  "inside": [
    3,
    1,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
  "plugins": [
    "imported backtrack-plugin-01",
  ],
}
`;

exports[`calls presets and plugins as a function with default options = {} async 1`] = `
{
  "plugins": [
    {
      "imported": "plugin-03",
      "plugin03Args": {
        "api": {},
        "dirname": "<PROJECT_ROOT>",
        "options": {},
      },
    },
  ],
  "preset05Args": {
    "api": {},
    "dirname": "<PROJECT_ROOT>",
    "options": {},
  },
}
`;

exports[`calls presets and plugins as a function with default options = {} sync 1`] = `
{
  "plugins": [
    {
      "imported": "plugin-03",
      "plugin03Args": {
        "api": {},
        "dirname": "<PROJECT_ROOT>",
        "options": {},
      },
    },
  ],
  "preset05Args": {
    "api": {},
    "dirname": "<PROJECT_ROOT>",
    "options": {},
  },
}
`;

exports[`calls presets and plugins as a function with specified options async 1`] = `
{
  "plugins": [
    {
      "imported": "plugin-03",
      "plugin03Args": {
        "api": {},
        "dirname": "<PROJECT_ROOT>",
        "options": {
          "special": "options 03",
        },
      },
    },
  ],
  "preset05Args": {
    "api": {},
    "dirname": "<PROJECT_ROOT>",
    "options": {
      "special": "options 05",
    },
  },
}
`;

exports[`calls presets and plugins as a function with specified options sync 1`] = `
{
  "plugins": [
    {
      "imported": "plugin-03",
      "plugin03Args": {
        "api": {},
        "dirname": "<PROJECT_ROOT>",
        "options": {
          "special": "options 03",
        },
      },
    },
  ],
  "preset05Args": {
    "api": {},
    "dirname": "<PROJECT_ROOT>",
    "options": {
      "special": "options 05",
    },
  },
}
`;

exports[`does not mutate original config async 1`] = `
{
  "inside": [
    [
      3,
      6,
      3,
    ],
    [
      1,
      2,
      3,
    ],
  ],
  "plugins": [
    [
      {
        "imported": [
          "imported plugin-02",
          "mutated imported plugin-02",
        ],
      },
      3,
    ],
    [
      {
        "imported": [
          "imported plugin-01",
          "mutated imported plugin-01",
        ],
      },
      3,
    ],
  ],
}
`;

exports[`does not mutate original config sync 1`] = `
{
  "inside": [
    [
      3,
      6,
      3,
    ],
    [
      1,
      2,
      3,
    ],
  ],
  "plugins": [
    [
      {
        "imported": [
          "imported plugin-02",
          "mutated imported plugin-02",
        ],
      },
      3,
    ],
    [
      {
        "imported": [
          "imported plugin-01",
          "mutated imported plugin-01",
        ],
      },
      3,
    ],
  ],
}
`;

exports[`handle base config as function async 1`] = `
{
  "args": {
    "api": {},
    "dirname": "<PROJECT_ROOT>",
    "options": {},
  },
  "plugins": [
    {
      "imported": "plugin-03",
      "plugin03Args": {
        "api": {},
        "dirname": "<PROJECT_ROOT>",
        "options": {
          "special": "options 03",
        },
      },
    },
  ],
  "preset05Args": {
    "api": {},
    "dirname": "<PROJECT_ROOT>",
    "options": {
      "special": "options 05",
    },
  },
}
`;

exports[`handle base config as function sync 1`] = `
{
  "args": {
    "api": {},
    "dirname": "<PROJECT_ROOT>",
    "options": {},
  },
  "plugins": [
    {
      "imported": "plugin-03",
      "plugin03Args": {
        "api": {},
        "dirname": "<PROJECT_ROOT>",
        "options": {
          "special": "options 03",
        },
      },
    },
  ],
  "preset05Args": {
    "api": {},
    "dirname": "<PROJECT_ROOT>",
    "options": {
      "special": "options 05",
    },
  },
}
`;

exports[`handles es module default exports async 1`] = `
{
  "inside": [
    3,
    6,
  ],
  "plugins": [
    {
      "imported": [
        "imported plugin-04",
      ],
    },
  ],
}
`;

exports[`handles es module default exports sync 1`] = `
{
  "inside": [
    3,
    6,
  ],
  "plugins": [
    {
      "imported": [
        "imported plugin-04",
      ],
    },
  ],
}
`;

exports[`ignores mutated value async 1`] = `
{
  "example": [
    0,
  ],
  "inside": [
    1,
  ],
  "object": {
    "array": [
      1,
    ],
    "one": true,
    "preset": 1,
  },
  "other": 1,
  "plugins": [
    {
      "imported": [
        "imported plugin-01",
      ],
    },
  ],
}
`;

exports[`ignores mutated value sync 1`] = `
{
  "example": [
    0,
  ],
  "inside": [
    1,
  ],
  "object": {
    "array": [
      1,
    ],
    "one": true,
    "preset": 1,
  },
  "other": 1,
  "plugins": [
    {
      "imported": [
        "imported plugin-01",
      ],
    },
  ],
}
`;

exports[`mergeObject processor async 1`] = `
{
  "example": [
    3,
    2,
    1,
  ],
  "inside": [
    3,
    1,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
      0,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
    "zero": true,
  },
  "other": 1,
}
`;

exports[`mergeObject processor sync 1`] = `
{
  "example": [
    3,
    2,
    1,
  ],
  "inside": [
    3,
    1,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
      0,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
    "zero": true,
  },
  "other": 1,
}
`;

exports[`merges deep nested presets async 1`] = `
{
  "example": [
    3,
    2,
    1,
  ],
  "inside": [
    3,
    1,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
  "plugins": [
    {
      "imported": [
        "imported plugin-01",
      ],
    },
  ],
}
`;

exports[`merges deep nested presets sync 1`] = `
{
  "example": [
    3,
    2,
    1,
  ],
  "inside": [
    3,
    1,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
  "plugins": [
    {
      "imported": [
        "imported plugin-01",
      ],
    },
  ],
}
`;

exports[`merges deep with custom prefix resolution async 1`] = `
{
  "example": [
    3,
    2,
    1,
  ],
  "inside": [
    3,
    1,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
  "plugins": [
    "imported backtrack-plugin-01",
  ],
}
`;

exports[`merges deep with custom prefix resolution sync 1`] = `
{
  "example": [
    3,
    2,
    1,
  ],
  "inside": [
    3,
    1,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
  "plugins": [
    "imported backtrack-plugin-01",
  ],
}
`;

exports[`plugins processor can be overridden async 1`] = `
{
  "example": false,
  "inside": false,
  "object": {
    "array": [
      1,
    ],
    "one": true,
    "preset": 1,
  },
  "other": 1,
  "plugins": [
    {
      "imported": [
        "imported plugin-01",
      ],
    },
    {
      "imported": [
        "imported plugin-02",
      ],
    },
  ],
}
`;

exports[`plugins processor can be overridden sync 1`] = `
{
  "example": false,
  "inside": false,
  "object": {
    "array": [
      1,
    ],
    "one": true,
    "preset": 1,
  },
  "other": 1,
  "plugins": [
    {
      "imported": [
        "imported plugin-01",
      ],
    },
    {
      "imported": [
        "imported plugin-02",
      ],
    },
  ],
}
`;

exports[`preset object order matter does not matter async 1`] = `
{
  "example": [
    3,
    2,
    1,
  ],
  "inside": [
    3,
    1,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
  "plugins": [
    {
      "imported": [
        "imported plugin-01",
      ],
    },
  ],
}
`;

exports[`preset object order matter does not matter sync 1`] = `
{
  "example": [
    3,
    2,
    1,
  ],
  "inside": [
    3,
    1,
  ],
  "object": {
    "array": [
      3,
      2,
      1,
    ],
    "one": true,
    "preset": 1,
    "three": true,
    "two": true,
  },
  "other": 1,
  "plugins": [
    {
      "imported": [
        "imported plugin-01",
      ],
    },
  ],
}
`;
